--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="col-16">还有学籍没有显示出来？<a style="color: #26b887;">尝试绑定</a></div>
                     <div class="clearboth"></div>
                 </div>
-                <div class="list-card xj" onclick="goXj()">
+                <div class="list-card xj" onclick="goDetail('xj')">
                     <div class="bk-green">本科</div>
                     <div class="card-title">河北师范大学</div>
                     <div class="card-content">汉语言文学 | 普通全日制</div>
@@ -35,7 +35,7 @@
                     <div class="col-16">还有学籍没有显示出来？<a style="color: #26b887;">尝试绑定</a></div>
                     <div class="clearboth"></div>
                 </div>
-                <div class="list-card xl">
+                <div class="list-card xl" onclick="goDetail('xl')">
                     <div class="bk-blue">本科</div>
                     <div class="card-title">河北师范大学</div>
                     <div class="card-content">汉语言文学 | 普通全日制</div>
@@ -46,7 +46,7 @@
                     <div class="col-16">还有学籍没有显示出来？<a style="color: #26b887;">尝试绑定</a></div>
                     <div class="clearboth"></div>
                 </div>
-                <div class="list-card xw">
+                <div class="list-card xw" onclick="goDetail('xw')">
                     <div class="xs-blue">学士</div>
                     <div class="card-title">河北师范大学</div>
                     <div class="card-content">文学学士学位</div>
