--- a/xl.html
+++ b/xl.html
@@ -6,39 +6,34 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='detail.css'>
-    <script src='xj.js'></script>
+    <script src='xl.js'></script>
 </head>
 <body>
     <div class="container">
         <div class="container-header">
             <div class="back" onclick="goback()"><</div>
-            <div class="header-title">高等学籍</div>
+            <div class="header-title">高等学历</div>
         </div>
         <div class="container-main">
-            <div class="card xj">
-                <div class="col-9">
+            <div class="card xl">
+                <div class="col-5">
                     <div class="flex-box">
                         <div class="flex1">
                             <div class="img-div">
-                                <img src="./images/lqpic.jfif" class="full-img">
-                            </div> 
-                            <span class="text">录取照片</span>
-                        </div> <div class="flex1">
-                            <div class="img-div">
                                 <img src="./images/xjpic.jfif" class="full-img">
                             </div> 
-                            <span class="text">学历照片</span>
+                            
                         </div>
                     </div>
                 </div>
-                <div class="col-15">
+                <div class="col-19">
                     <div class="van-col van-col--15">
                         <h5>石子贤</h5> 
                         <span>男　1995年06月30日</span>
                     </div>
                 </div>
                 <div class="clearboth"></div>
-                <div class="bk-green">本科</div>
+                <div class="bk-blue">本科</div>
                 <div class="card-title">河北师范大学</div>
                 <div class="card-content">汉语言文学 | 普通全日制</div>
                 
